# cytech-project-synkro-ing1-20242025

./: .gitignore  README.md  package.json  tmp.md
server/: pyproject.toml  requirements.txt
server/api/: exception_handlers.py  urls.py  views.py
server/auth/: apps.py  serializers.py  urls.py  views.py
server/config/: settings.py  urls.py
server/devices/: admin.py  device_catalogue.py  email.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/devices/migrations/: 0001_initial.py  0002_device_brand.py  0002_initial.py  0003_add_default_device_types.py  0003_deviceenergyhistory.py  0004_alert_audiosystem_blind_camera_devicestat_and_more.py  0004_delete_deviceenergyhistory.py  0005_deviceconsumptionhistory.py
server/homes/: admin.py  models.py  serializers.py  urls.py  views.py
server/homes/migrations/: 0001_initial.py
server/rooms/: admin.py  models.py  serializers.py  urls.py  views.py
server/rooms/migrations/: 0001_initial.py
server/templates/emails/: email_change_otp.html  home_invitation.html  password_reset.html  verification_email.html
server/users/: __init__.py  admin.py  admin_action_history.py  admin_urls.py  email.py  me_urls.py  models.py  models_action_history.py  models_login_history.py  serializers.py  signals.py  tokens.py  urls.py  views.py
server/users/migrations/: 0001_initial.py  0002_emailchangerequest.py  0002_guestprofile.py  (+14 more)
server/utils/: __init__.py  api_responses.py  emails.py  exceptions.py  middleware.py  mixins.py  pagination.py  paginations.py  permissions.py  responses.py  tokens.py  validators.py
(+197 files in other folders)
